# ms2md

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: usecase.md
docx2md/: __init__.py  __main__.py  cli.py  config.py  converter.py
docx2md/formatters/: __init__.py  latex.py  markdown.py
docx2md/processors/: __init__.py  base.py  cleanup.py  docx.py  equation_fix.py  equations.py  figures.py  front_matter_structure.py  frontmatter.py  images.py  math_extraction.py  references.py  tables.py  unicode_fix.py
docx2md/utils/: __init__.py  docx_xml_utils.py  file_utils.py  logging_utils.py  math_utils.py
examples/: batch_convert.py  config.yaml  example.md
ms2md/: __init__.py  __main__.py  cli.py  config.py  converter.py
ms2md/formatters/: __init__.py  latex.py  markdown.py
ms2md/processors/: __init__.py  base.py  docx.py  equations.py  images.py  references.py  tables.py
ms2md/utils/: file_utils.py  logging_utils.py
scripts/: docx2md  fix_delimiters.py  ms2md
tests/: __init__.py  test_cleanup.py  test_cli.py  test_converter.py  test_equation_fix.py  test_equations.py  test_figures.py  test_front_matter_structure.py  test_frontmatter.py  test_math_extraction.py  test_unicode_fix.py
tests/fixtures/: README.md
